--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="enter_password">Enter Password</string>
     <string name="continuetext">Continue</string>
     <string name="search">Search</string>
+    <string name="sign_in">Sign In</string>
+    <string name="create_account">Create Account</string>
 </resources>
