Working on Reviews

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,6 @@
     <string name="back">Back</string>
     <string name="order">Order</string>
     <string name="add_review">Add Review</string>
+    <string name="enter_number_of_stars">Enter Number of Stars</string>
+    <string name="enter_review">Enter Review</string>
 </resources>
