--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="enter_number_of_stars">Enter Number of Stars (1-5)</string>
     <string name="enter_review">Enter Review</string>
     <string name="number_of_stars">Number of Stars</string>
+    <string name="no_orders">No Orders</string>
 </resources>
